fixed padding on mobile

--- a/style.css
+++ b/style.css
@@ -29,26 +29,27 @@ header {
 
 main {
 	margin-top: 1rem;
-	width: 80%;
-	padding-left: 8%;
-	padding-right: 8%;
 }
 
 @media only screen and (min-width: 0px) {
 	html { font-size: 8px; }
 	.container { width: 95%; }
-	main { padding-left: 0; padding-right: 0; }
 }
 
 @media only screen and (min-width: 500px) {
 	html { font-size: 12px; }
 	.container  { width: 80%; }
-	main { padding-left: 0; padding-right: 0; }
 }
 
 @media only screen and (min-width: 1100px) {
 	html { font-size: 13px; }
 	.container { width: 50%; }
+
+	main {
+		width: 80%;
+		padding-left: 8%;
+		padding-right: 8%;
+	}
 }
 
 
